# YOLOGame

./: .gitignore  Cargo.toml  README.md
examples/: adb.rs  capture.rs  key_mouse.rs  ocr.rs
extra/: ddhid40616.cat  ddhid40616.inf  ddhid40616.sys
paddleocr/: Cargo.toml
paddleocr/src/: det.rs  lib.rs  rec.rs
src/: lib.rs  main.rs
src/adb/: cmd.rs  mod.rs
src/capture/: mod.rs  windows.rs
src/handle/: dnf.rs  mod.rs
src/ocr/: mod.rs  paddle.rs  paddleocr.rs
src/ui/: debug.rs
src/virtual_ddl/: dnf.rs  mod.rs  windows.rs
src/yolo/: lib.rs  mod.rs  model.rs  yolo_result.rs
win-screenshot-main/src/: capture.rs
