[package]
name = "paddleocr"
version = "0.1.0"
edition = "2021"


[dependencies]
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "webp-encoder"] }
imageproc = { version = "0.23.0", default-features = false }
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.4", features = ["load-dynamic", "copy-dylibs", "half"] }

